tests/fixtures/invalid/pow_int_bool_float.py
# Cannot call pow() with Int, Bool, Float
x = pow(1, True, 1.0)
